--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prop-types": "^15.6.2",
     "react": "16.3.1",
     "react-native": "0.55.4",
+    "react-native-cli": "^2.0.1",
     "react-native-google-maps-directions": "^2.0.0",
     "react-native-google-places": "^2.5.2",
     "react-native-google-places-autocomplete": "^1.3.6",
