--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "16.3.1",
     "react-native": "0.55.4",
     "react-native-cli": "^2.0.1",
+    "react-native-elements": "^0.19.1",
     "react-native-google-maps-directions": "^2.0.0",
     "react-native-google-places": "^2.5.2",
     "react-native-google-places-autocomplete": "^1.3.6",
@@ -25,13 +26,13 @@
     "react-navigation": "^2.5.5",
     "redux": "^4.0.0"
   },
+  "jest": {
+    "preset": "react-native"
+  },
   "devDependencies": {
     "babel-jest": "23.2.0",
     "babel-preset-react-native": "4.0.0",
     "jest": "23.2.0",
     "react-test-renderer": "16.3.1"
-  },
-  "jest": {
-    "preset": "react-native"
   }
 }
