--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-sqlite-storage": "^3.3.6",
     "react-native-style-tachyons": "^3.7.0",
     "react-navigation": "^2.5.5",
+    "react-redux": "^5.0.7",
     "redux": "^4.0.0"
   },
   "jest": {
@@ -33,6 +34,7 @@
     "babel-jest": "23.2.0",
     "babel-preset-react-native": "4.0.0",
     "jest": "23.2.0",
-    "react-test-renderer": "16.3.1"
+    "react-test-renderer": "16.3.1",
+    "redux-devtools": "^3.4.1"
   }
 }
