Screen เพิ่มบันทึกด้วยตัวเอง3.8.1

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-router-flux": "^3.38.0",
     "react-native-sqlite-storage": "^3.3.6",
     "react-native-style-tachyons": "^3.7.0",
+    "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.5.5",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0"
